veloq-runtime/tests/ui/scope_spawn_boxed_lifetime_fail.stderr
error[E0373]: async block may outlive the current function, but it borrows `x`, which is owned by the current function
  --> tests/ui/scope_spawn_boxed_lifetime_fail.rs:9:35
   |
 7 |         scope!(ctx, async |s| {
   |                            - lifetime `'1` appears in the type of `s`
 8 |             let x = 42;
 9 |             let _ = s.spawn_boxed(async {
   |                                   ^^^^^ may outlive borrowed value `x`
10 |                 let _y = &x;
   |                           - `x` is borrowed here
   |
   = note: async blocks are not executed immediately and must either take a reference or ownership of outside variables they use
help: to force the async block to take ownership of `x` (and any other referenced variables), use the `move` keyword
   |
 9 |             let _ = s.spawn_boxed(async move {
   |                                         ++++

error[E0373]: async block may outlive the current function, but it borrows `x`, which is owned by the current function
  --> tests/ui/scope_spawn_boxed_lifetime_fail.rs:18:41
   |
16 |         scope!(ctx, async |s| {
   |                            - lifetime `'1` appears in the type of `s`
17 |             let x = 42;
18 |             let _ = s.spawn_boxed_local(async {
   |                                         ^^^^^ may outlive borrowed value `x`
19 |                 let _y = &x;
   |                           - `x` is borrowed here
   |
   = note: async blocks are not executed immediately and must either take a reference or ownership of outside variables they use
help: to force the async block to take ownership of `x` (and any other referenced variables), use the `move` keyword
   |
18 |             let _ = s.spawn_boxed_local(async move {
   |                                               ++++
